tests/invalid/foreign_decl_line_number.err_exp5
#error Error in foreign code
#error Error in foreign decl
#error Error in foreign proc
